# pyfastmail-mcp

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  ltc.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.kiro_bak/agents/: architect-prompt.md  architect.json  developer-prompt.md  developer.json  reviewer-prompt.md  reviewer.json  tester-prompt.md  tester.json
.kiro_bak/settings/: lsp.json  mcp.json
.kiro_bak/skills/api-implementation/: SKILL.md
.kiro_bak/skills/tool-registration/: SKILL.md
.kiro_bak/steering/: code-quality.md  conventions.md  issues.md  status.md  steering-guide.md  testing.md
docs/: index.html
docs/site/: CNAME  index.html
site/: style.css
src/pyfastmail_mcp/: __init__.py  client.py  dav_client.py  exceptions.py  server.py
tests/: conftest.py  test_dav_client.py  test_exception_handling.py  test_imports.py  test_optional_dav.py  test_redirect_blocking.py  test_registration.py  test_ssrf_validation.py
tests/calendar/: test_caldav.py  test_caldav_get_event.py  test_caldav_write.py
tests/contacts/: test_carddav.py  test_carddav_contacts.py  test_carddav_write.py  test_contacts.py  test_contacts_create.py  test_contacts_delete.py  test_contacts_get.py  test_contacts_list.py  test_contacts_query.py  test_contacts_update.py
tests/files/: test_path_traversal.py  test_webdav.py  test_webdav_write.py
tests/mail/: test_actions.py  test_attachments.py  test_email.py  test_export.py  test_forward.py  test_identities.py  test_import.py  test_labels.py  test_mailbox.py  test_masked_email.py  test_parse.py  test_pin_email.py  test_reply.py  test_send.py  test_set_errors.py  test_setup_project.py  test_snippets.py  test_thread.py
(+32 files in other folders)
